# soundgrid

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PLAN.html  PRIVACY.md  PRODUCT.md  README.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  electron-builder.json  package.json  pnpm-lock.yaml  tsconfig.electron.json  vite.config.ts
.github/workflows/: release.yml
.impeccable/live/: config.json
native/audio-engine/: Cargo.toml
native/audio-engine/src/: decoder.rs  main.rs  protocol.rs
scripts/: build-native-mac-universal.mjs  build-preload.mjs  fetch-vb-cable.mjs  pack.mjs  smoke-electron.mjs
src/main/: audio-engine.test.ts  audio-engine.ts  devices.ts  driver-manager.ts  hotkeys.ts  ipc-validation.test.ts  ipc-validation.ts  library.test.ts  library.ts  mac-permissions.test.ts  mac-permissions.ts  main.ts  serialized-file-writer.ts  settings.test.ts  settings.ts
src/preload/: preload.ts
src/renderer/: global.d.ts  index.html  main.ts  preview.html  tsconfig.json
src/renderer/components/: App.ts  BusMeter.ts  ClipGrid.ts  SettingsDrawer.ts  Sidebar.ts  SoundCard.ts  TopBar.ts  hotkey-utils.test.ts  hotkey-utils.ts  icons.ts  library-actions.ts  store.ts
src/renderer/styles/: app.css
src/shared/: ipc.ts  routing.test.ts  routing.ts  types.ts
