[package]
name = "soundgrid-audio"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
cpal = "0.17.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = { version = "0.5.4", features = ["all"] }

[profile.release]
lto = "thin"
strip = true
